--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Amri Style Salong - Frisör i Gamla Stan, Stockholm</title>
     <meta name="description" content="Välkommen till Amri Style Salong i Gamla stan. Professionell frisör med över 40 års erfarenhet. Klippning, färgning och design. Boka tid: 08 21 55 15" />
     <meta name="author" content="Amri Style Salong" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -13,12 +14,10 @@
     <meta property="og:title" content="Amri Style Salong - Frisör i Gamla Stan" />
     <meta property="og:description" content="Professionell frisör med över 40 års erfarenhet i Gamla stan, Stockholm" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Amri Style Salong - Frisör i Gamla Stan" />
     <meta name="twitter:description" content="Professionell frisör med över 40 års erfarenhet" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- GitHub Pages SPA redirect script -->
     <script type="text/javascript">
